# app/Http/Controllers/BookingApiController.php
@@ -6,9 +6,10 @@ use App\Models\Booking;
 use App\Models\Enums\BookingType;
 use App\Rules\CallsignSearchFilter;
 use Carbon\Carbon;
+use Exception;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
-use Illuminate\Validation\Rule;
+use Illuminate\Support\Facades\Validator;
 use Illuminate\Validation\Rules\Enum;
 use Illuminate\Validation\ValidationException;
 
@@ -38,6 +39,8 @@ class BookingApiController extends Controller
             'cid' => 'required|numeric',
             'start' => 'required|date_format:Y-m-d H:i:s',
             'end' => 'required|date_format:Y-m-d H:i:s|after:start',
+            'division' => 'nullable|alpha|required_with:subdivision',
+            'subdivision' => 'nullable|alpha',
             'type' => [new Enum(BookingType::class)],
         ];
 
@@ -46,6 +49,8 @@ class BookingApiController extends Controller
             'cid' => 'numeric',
             'start' => 'required_with:end|date_format:Y-m-d H:i:s',
             'end' => 'required_with:start|date_format:Y-m-d H:i:s|after:start',
+            'division' => 'nullable|alpha|required_with:subdivision',
+            'subdivision' => 'nullable|alpha',
             'type' => [new Enum(BookingType::class)],
         ];
 
@@ -55,6 +60,8 @@ class BookingApiController extends Controller
                 new CallsignSearchFilter
             ],
             'date' => 'date_format:Y-m-d',
+            'division' => 'alpha|required_with:subdivision',
+            'subdivision' => 'alpha',
             'type' => [
                 new Enum(BookingType::class)
             ],
@@ -73,11 +80,11 @@ class BookingApiController extends Controller
         $this->validate($request, $this->custom_rules_filter, $this->custom_messages);
 
         $query = Booking::query()
-            ->select(['id', 'cid', 'type', 'callsign', 'start', 'end']);
+            ->select(['id', 'cid', 'type', 'callsign', 'start', 'end', 'division', 'subdivision']);
 
         if ($request->has('key_only') && (bool)$request->get('key_only') == true) {
             if (!isset($request->user)) {
-                return response_unauth(['error' => 'Unable to Authenticate']);
+                return response_unauth(['message' => 'Unable to Authenticate']);
             }
             $query = $query->where('api_key_id', $request->user->id);
         }
@@ -89,6 +96,14 @@ class BookingApiController extends Controller
                     $q->orWhere('callsign', 'like', '%'.$arr_item.'%');
                 }
             });
+        }
+
+        if ($request->has('division')) {
+            $query = $query->where('division', $request->get('division'));
+
+            if ($request->has('subdivision')) {
+                $query = $query->where('subdivision', $request->get('subdivision'));
+            }
         }
 
         if ($request->has('date')) {
@@ -124,7 +139,27 @@ class BookingApiController extends Controller
      */
     public function store(Request $request): JsonResponse
     {
-        $this->validate($request, $this->custom_rules, $this->custom_messages);
+        $validator = Validator::make($request->all(), $this->custom_rules, $this->custom_messages);
+
+        $start = $request->post('start');
+        $end = $request->post('end');
+        $booking_exists = null;
+        try {
+            $booking_exists = Booking::query()
+                ->where('callsign', $request->post('callsign'))
+                ->where(function($q) use ($start, $end) {
+                    $q->where('end', '>', $start)->where('start', '<', $end);
+                })
+                ->first();
+        } catch (Exception) {}
+
+        if($booking_exists) {
+            $validator->errors()->add('callsign', 'Booking overlaps with an existing booking: '.$booking_exists->id);
+        }
+
+        if($validator->errors()->count()) {
+            return response_validation_errors($validator->errors());
+        }
 
         $booking = new Booking;
         $booking->api_key_id = $this->api_key_id;
@@ -132,10 +167,12 @@ class BookingApiController extends Controller
         $booking->cid = $request->post('cid');
         $booking->start = $request->post('start');
         $booking->end = $request->post('end');
+        $booking->division = $request->post('division', $request->user->division);
+        $booking->subdivision = $request->post('subdivision', $request->user->subdivision);
         $booking->type = $request->post('type', 'booking');
         $booking->save();
 
-        return response_created($booking->only(['id', 'callsign', 'cid', 'type', 'start', 'end']));
+        return response_created($booking->only(['id', 'callsign', 'cid', 'type', 'start', 'end', 'division', 'subdivision']));
     }
 
     /**
@@ -147,10 +184,10 @@ class BookingApiController extends Controller
         $booking = Booking::query()->find($id);
 
         if (!$booking) {
-            return response_not_found(['error' => 'Booking not found']);
+            return response_not_found(['message' => 'Booking not found']);
         }
 
-        return response_success($booking->only(['id', 'callsign', 'cid', 'type', 'start', 'end']));
+        return response_success($booking->only(['id', 'callsign', 'cid', 'type', 'start', 'end', 'division', 'subdivision']));
     }
 
     /**
@@ -161,7 +198,28 @@ class BookingApiController extends Controller
      */
     public function update(Request $request, $id): JsonResponse
     {
-        $this->validate($request, $this->custom_rules_update, $this->custom_messages);
+        $validator = Validator::make($request->all(), $this->custom_rules_update, $this->custom_messages);
+
+        $start = $request->post('start');
+        $end = $request->post('end');
+        $booking_exists = null;
+        try {
+            $booking_exists = Booking::query()
+                ->where('id', '!=', $id)
+                ->where('callsign', $request->post('callsign'))
+                ->where(function($q) use ($start, $end) {
+                    $q->where('end', '>', $start)->where('start', '<', $end);
+                })
+                ->first();
+        } catch (Exception) {}
+
+        if($booking_exists) {
+            $validator->errors()->add('callsign', 'Booking overlaps with an existing booking: '.$booking_exists->id);
+        }
+
+        if($validator->errors()->count()) {
+            return response_validation_errors($validator->errors());
+        }
 
         $booking = Booking::query()->find($id);
 
@@ -170,13 +228,13 @@ class BookingApiController extends Controller
         }
 
         if (isset($booking->api_key_id) && $booking->api_key_id != $this->api_key_id) {
-            return response_unauth(['error' => 'Booking not owned by this API key']);
+            return response_unauth(['message' => 'Booking not owned by this API key']);
         }
 
-        $booking->fill($request->only(['callsign', 'cid', 'start', 'end', 'type']));
+        $booking->fill($request->only(['callsign', 'cid', 'start', 'end', 'type', 'division', 'subdivision']));
         $booking->save();
 
-        return response_success($booking->only(['id', 'callsign', 'cid', 'type', 'start', 'end']));
+        return response_success($booking->only(['id', 'callsign', 'cid', 'type', 'start', 'end', 'division', 'subdivision']));
     }
 
     /**
@@ -192,12 +250,12 @@ class BookingApiController extends Controller
         }
 
         if (isset($booking->api_key_id) && $booking->api_key_id != $this->api_key_id) {
-            return response_unauth(['error' => 'Booking not owned by this API key']);
+            return response_unauth(['message' => 'Booking not owned by this API key']);
         }
 
         $booking->delete();
 
-        return response_success();
+        return response_delete_success();
     }
 
 }
